# balderhub-smtp

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pylint.yml  python-publish.yml  test.yml
docs/source/: conf.py  examples.rst  features.rst  index.rst  installation.rst  scenarios.rst  topic_intro.rst  utilities.rst
src/balderhub/smtp/lib/scenario_features/: __init__.py  smtp_client_feature.py  smtp_readable_server_feature.py  smtp_server_config.py  smtp_server_feature.py
src/balderhub/smtp/lib/setup_features/: __init__.py  aiosmtpd_server_feature.py  local_smtp_reader.py  proxy_smtp_reader.py  smtplib_client_feature.py
src/balderhub/smtp/scenarios/: __init__.py  scenario_send_and_read_back.py
tests/lib/setup_features/: aiosmtpd_server_feature.py  local_smtp_config.py
tests/suites/simple/: scenario_balderhub.py  setup_simple.py
