[metadata]
name = balderhub-smtp
description = balderhub-smtp: BalderHub Project interacting and validating services with SMTP or SMTP services itself
author = Max Stahlschmidt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://hub.balder.dev/projects/smtp
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = test, systemtest, reusable, scenario, junit, balder
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
project_urls =
    Source=https://github.com/balder-dev/balderhub-smtp/
    Tracker=https://github.com/balder-dev/balderhub-smtp/issues

[options]
packages =
    balderhub.smtp
    balderhub.smtp.lib
    balderhub.smtp.lib.scenario_features
    balderhub.smtp.lib.setup_features
    balderhub.smtp.lib.utils
    balderhub.smtp.scenarios
    balderhub.smtp.setups

install_requires =
    baldertest
    balderhub-email
    aiosmtpd~=1.4.0
python_requires = >=3.10
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0
zip_safe = no
